# ProjectKind

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs
main/: Cargo.toml
main/src/: lib.rs
src/: lib.rs  main.rs
test/: Cargo.toml
test/src/: main.rs
test/tests/: test_simple_f64.rs  test_simple_string.rs  test_simple_u32.rs  test_simple_u8.rs  test_simple_vec_string.rs  test_simple_vec_u8.rs
tests/: test_basic.rs  test_simple_bool.rs  test_simple_f32.rs  test_simple_u16.rs  test_simple_u64.rs
