[package]
name = "project_kind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
project_kind_macros = { path = "./macros" }

